@@ -1,3 +1,5 @@
-javac -d ..\class ..\src\metier\persistence\*.java
+javac -sourcepath ../src -d ../class --module-path C:\Users\maelc\Desktop\Is_All\BUTnfo\Semestre_2\SAE\SAE2_01\SAE_201_D1\java\javafx-sdk-21.0.7\lib --add-modules javafx.controls,javafx.graphics,javafx.fxml ../src/vue/App.java
+
+java -cp ../class --module-path C:\Users\maelc\Desktop\Is_All\BUTnfo\Semestre_2\SAE\SAE2_01\SAE_201_D1\java\javafx-sdk-21.0.7\lib --add-modules javafx.controls,javafx.graphics,javafx.fxml vue.App
 
 pause
